--- a/ros-humble/Dockerfile
+++ b/ros-humble/Dockerfile
@@ -1,4 +1,6 @@
 from osrf/ros:humble-desktop-full
-RUN apt update
+RUN apt-get update
 RUN apt install python3 python3-pip
 RUN pip install nbdev jupyterlab
+RUN sudo apt install nano
+RUN sudo apt install wget
