update rolling tutorial

--- a/ros_rolling/Dockerfile
+++ b/ros_rolling/Dockerfile
@@ -2,8 +2,8 @@ FROM osrf/ros:rolling-desktop-full
 
 # Running essential commands
 RUN sudo apt-get update
-RUN sudo apt install build-essential
-RUN sudo apt install vim
+RUN sudo apt-get install build-essential
+RUN sudo apt-get -y install vim
 
 # Setting up the env
-RUN echo >> .bashrc "source /opt/ros/humble/setup.bash"
+RUN echo >> .bashrc "source /opt/ros/humble/setup.bash
