--- a/ros_rolling/Dockerfile
+++ b/ros_rolling/Dockerfile
@@ -6,4 +6,4 @@ RUN sudo apt-get install build-essential
 RUN sudo apt-get -y install vim
 
 # Setting up the env
-RUN echo >> .bashrc "source /opt/ros/humble/setup.bash
+RUN echo >> .bashrc "source /opt/ros/humble/setup.bash"
